turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:66: error: expected start of definition
	override def run() {
                 ^Turmite:98: error: Unmatched closing brace '}' ignored here
}
^